--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <h1>Home</h1>
-    <p>Home page</p>
-
+    <form>
+        <button type="button">
+            <a href="/Diabetes">Login</a>
+        </button>
+    </form>
 </html>
