Diabetes Prediction Done

--- a/templates/Diabetes.html
+++ b/templates/Diabetes.html
@@ -21,9 +21,9 @@
                 <label for="insulin"><b>Insulin</b></label>
                 <input type="number" placeholder="Enter Insulin" name="insulin" required><br>
                 <label for="bmi"><b>BMI</b></label>
-                <input type="number" placeholder="Enter BMI" name="bmi" required><br>
+                <input type="number" step="0.1" placeholder="Enter BMI" name="bmi" required><br>
                 <label for="dpf"><b>DPF</b></label>
-                <input type="number" placeholder="Enter DPF" name="dpf" required><br>
+                <input type="number" step = "0.1" placeholder="Enter DPF" name="dpf" required><br>
                 <label for="age"><b>Age</b></label>
                 <input type="number" placeholder="Enter Age" name="age" required><br>
                 <hr>
